<resources>
    <string name="app_name">My_Gari</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="fullname">Fullname</string>
    <string name="signup">Signup</string>
    <string name="already_have_an_account_log_in">Already have an account? Log in</string>
    <string name="mobile">Mobile</string>
    <string name="register">SignUp</string>
    <string name="username">Username</string>
    <string name="text_view">TextView</string>
    <string name="product_desc">Product Desc</string>
    <string name="product_details">Product Details</string>
    <string name="login">Login</string>
    <string name="back">Back</string>
    <string name="loginbutton">Login</string>
    <string name="don_t_have_an_account_signup">Don\'t have an account?SignUp</string>
    <string name="search">Search</string>
    <string name="top_discounted_items">Top Discounted Items</string>
    <string name="select_categories">Select Categories</string>
    <string name="see_more">See More</string>
    <string name="recently_viewed_items">Recently Viewed Items</string>
    <string name="Autrotonics">Spare Parts</string>
    <string name="shop_auto_spare_parts_and_cars_throgh_autotronics_ltd_at_best_prices">Shop Auto Spare Parts and Cars throgh Autotronics ltd at best prices.</string>
    <string name="shopping_cart_description">Shopping Cart Description</string>
    <string name="log_out_description">Log Out Description</string>
    <string name="buy_now">Buy Now</string>
    <string name="buy_now_button_description">Buy Now Button Description</string>
    <string name="select_a_category">Select a category</string>
    <string name="unit">Unit</string>
    <string name="product_name">Product Name</string>
    <string name="result">Result</string>
    <string name="quantity">Quantity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_product">Search Product</string>
    <string name="what_do_you_wish_for">What do you wish for ?</string>
    <string name="microphone">microphone</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="textview">TextView</string>
    <string name="ksh_5000">KSH 5000</string>
    <string name="product">Product</string>
    <string name="do_not_have_an_account_sign_up">Do not have an account? SignUp </string>
    <string name="cart">Cart</string>
    <string name="_2_item_s">2 item(s)</string>
    <string name="product_image">product image</string>
    <string name="ksh_0_0">KSH 0.0</string>
    <string name="without_taxes">(without taxes)</string>
    <string name="subtotal">Subtotal</string>
    <string name="continue_button">continue</string>
    <string name="minus">-</string>
    <string name="add">+</string>
    <string name="save">SAVE</string>
    <string name="_0">0</string>
    <string name="number">1</string>
    <string name="_11">11%</string>
    <string name="tax">Tax</string>
    <string name="cost_details">Cost Details</string>
    <string name="information">Information</string>
    <string name="total">Total</string>
    <string name="additional_comments">Additional Comments</string>
    <string name="date_shipping">Date Shipping</string>
    <string name="address">Address</string>
    <string name="products_ordered">Products Ordered</string>
    <string name="process_checkout">PROCESS CHECKOUT</string>
    <string name="total_price_100ksh">TOTAL PRICE : 100ksh</string>
    <string name="current_date">Current Date:</string>
    <string name="current_time">Current Time:</string>
    <string name="product_price">Product Price:</string>
    <string name="total_price">Total Price</string>
    <string name="total_quantity">Total Quantity</string>
    <string name="_1">1</string>
    <string name="remove">remove</string>
    <string name="nairobi_kenya">Nairobi Kenya</string>
    <string name="add_address">Add Address</string>
    <string name="continue_to_payment">Continue to payment</string>
    <string name="create_address">Create Address</string>
    <string name="address_lane">Address Lane</string>
    <string name="city">City</string>
    <string name="postal_code">Postal Code</string>
    <string name="phone_number">Phone Number</string>
    <string name="discount">Discount</string>
    <string name="shipping">Shipping</string>
    <string name="check_out">Check Out</string>
    <string name="_00">$ 00</string>
    <string name="creditcard">creditCard</string>
    <string name="enter_your_card_details">Enter Your Card Details</string>
    <string name="pay_now">PAY NOW</string>
    <string name="cvv">CVV</string>
    <string name="cardnumber">CardNumber</string>
    <string name="cardexpiry">CardExpiry</string>
    <string name="numbers">numbers</string>
    <string name="credit">creditCard</string>
    <string name="your_order_receipt">Your Order Receipt</string>
    <string name="amount">Amount:</string>
    <string name="your_transaction_id">Your transaction ID:</string>
    <string name="your_transaction_is_successful">Your transaction is successful</string>
    <string name="done">DONE</string>
    <string name="your_order_id">Your Order ID:</string>


</resources>